--- a/app/assets/scss/_global.scss
+++ b/app/assets/scss/_global.scss
@@ -44,9 +44,6 @@ a:active {
   padding-top: 45px;
 }
 
-
-$light-blue: #37c0d8;
-
 .button {
   display:inline-block;
   position: relative;
@@ -83,6 +80,10 @@ $light-blue: #37c0d8;
   left: -1px;
   right: 105%;
   -webkit-backface-visibility: hidden;
+}
+
+.add-booty {
+  padding-bottom: 20px;
 }
 
 
